--- a/app/wheelTracker/wheelTracker/Info.plist
+++ b/app/wheelTracker/wheelTracker/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSHealthShareUsageDescription</key>
+	<string>WheelTracker</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>WheelTracker</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UIApplicationSceneManifest</key>
