feat: Info.plist에서 location description 추가

--- a/app/wheelTracker/wheelTracker/Info.plist
+++ b/app/wheelTracker/wheelTracker/Info.plist
@@ -25,9 +25,9 @@
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>WheelTracker</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string></string>
+	<string>WheelTracking</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>WheelTracking</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
