--- a/app/wheelTracker/wheelTracker/Info.plist
+++ b/app/wheelTracker/wheelTracker/Info.plist
@@ -21,13 +21,13 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSHealthShareUsageDescription</key>
-	<string>WheelTracker</string>
+	<string>애플워치를 통해 측정된 푸시 횟수를 이용해 측정값의 정확도를 향상시킵니다.</string>
 	<key>NSHealthUpdateUsageDescription</key>
-	<string>WheelTracker</string>
+	<string>애플워치가 없는 사용자들이 HealthKit에 푸시 횟수를 누적시킬 수 있도록 합니다.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>WheelTracking</string>
+	<string>애플워치가 없는 사용자도 위치 정보를 통해 푸시 횟수를 측정할 수 있도록 합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>WheelTracking</string>
+	<string>애플워치가 없는 사용자도 위치 정보를 통해 푸시 횟수를 측정할 수 있도록 합니다.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
